<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/filter"
    android:icon="@drawable/ic_filter_list_white_24dp"
    android:showAsAction="ifRoom|withText"
    android:title="@string/menu_filter">
    <menu>
      <group
        android:id="@+id/filter_group"
        android:checkableBehavior="single">
        <item
          android:id="@+id/all"
          android:checked="true"
          android:title="@string/menu_filter_all" />
        <item
          android:id="@+id/completed"
          android:title="@string/menu_filter_completed" />
        <item
          android:id="@+id/outstanding"
          android:title="@string/menu_filter_outstanding" />
      </group>
    </menu>
  </item>
  <item
    android:id="@+id/add"
    android:icon="@drawable/ic_add_white_24dp"
    android:showAsAction="ifRoom|withText"
    android:title="@string/menu_add" />
  <item
    android:id="@+id/export"
    android:icon="@drawable/ic_save_white_24dp"
    android:showAsAction="never"
    android:title="@string/menu_export" />
  <item
    android:id="@+id/share"
    android:icon="@drawable/ic_share_white_24dp"
    android:showAsAction="never"
    android:title="@string/menu_share" />
  <item
    android:id="@+id/upload"
    android:icon="@drawable/ic_cloud_upload_white_24dp"
    android:showAsAction="never"
    android:title="@string/menu_upload" />
</menu>